...
        }
    }

    var accessibilityLabel: String {
        switch self {
        case .close:
            "Close"
        case .minimize:
            "Minimize"
        }
    }
}

